name: ehe
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Jan Hrček
homepage: https://github.com/jhrcek/ehe
category: Web
author: Jan Hrček
extra-source-files:
    README.md

executable ehe
    main-is: Main.hs
    build-depends:
        base -any,
        aeson -any,
        lens -any,
        lens-aeson -any,
        text -any,
        bytestring -any,
        vector -any,
        unordered-containers -any
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
